rename the package

--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="3">
-  <name>eeg_bridge</name>
+  <name>sense_bridge</name>
   <version>0.0.0</version>
-  <description>Mock EEG Publisher</description>
+  <description>EEG Bridge</description>
   <maintainer email="a.al-hindawi@ucl.ac.uk">root</maintainer>
   <license>Apache-2.0</license>
 
