--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script_dir=$base/lib/eeg_bridge
+script_dir=$base/lib/sense_bridge
 [install]
-install_scripts=$base/lib/eeg_bridge
+install_scripts=$base/lib/sense_bridge
