--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -31,12 +31,11 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-        cache: "pip"
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        # Install your package with dev dependencies (pytest etc)
+        cd src/sense_bridge
         pip install .[dev]
 
     - name: Run tests
